--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/group-1686556507-128x103.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -22,7 +22,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre:300,300i,400,400i,700,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Hedvig+Letters+Sans:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hedvig+Letters+Sans:400&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=nDWF6R"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=nDWF6R" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fHY2a1"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fHY2a1" type="text/css">
 
   
   
@@ -70,7 +70,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="content-wrap col-12 col-md-12 col-lg-10 col-xl-8">
-				<h1 class="mbr-section-title mbr-fonts-style mbr-white mb-5 display-1">Workspace</h1>
+				<h1 class="mbr-section-title mbr-fonts-style mbr-white mb-5 display-1">deSchoolNE Workspaces</h1>
 				
 				<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
 					This website is dedicated to documenting and sharing the unique cultural, ecological, and traditional knowledge of Northeast India. Through collaborative research, community engagement, and storytelling, we aim to explore and preserve the rich heritage of the region while offering new perspectives on how humans interact with nature and culture. Expect to delve into a wealth of insights, projects, and narratives that highlight the vibrant and diverse world of Northeast India.
@@ -259,7 +259,7 @@
 				<div class="list-wrapper">
 					
 					<ul class="list mbr-fonts-style display-4">
-						<li class="item-wrap"><a href="index.html" class="text-white">HOME</a> </li><li class="item-wrap">       <a href="index.html#pricing2-k" class="text-white">PROJECTS</a> </li><li class="item-wrap">     <a href="about.html" class="text-white">ABOUT </a></li><li class="item-wrap"><br></li>
+						<li class="item-wrap"><a href="index.html" class="text-white">HOME</a> </li><li class="item-wrap"><a href="index.html#pricing2-k" class="text-white">WORKSPACES</a> </li><li class="item-wrap">     <a href="about.html" class="text-white">ABOUT </a></li><li class="item-wrap"><br></li>
 					</ul>
 				</div>
 			</div>
