--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/group-1686556507-128x103.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -23,7 +23,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre:300,300i,400,400i,700,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Hedvig+Letters+Sans:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hedvig+Letters+Sans:400&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aEfmdf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aEfmdf" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=O0Hofd"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=O0Hofd" type="text/css">
 
   
   
@@ -205,7 +205,7 @@
 				<div class="list-wrapper">
 					
 					<ul class="list mbr-fonts-style display-4">
-						<li class="item-wrap"><a href="index.html" class="text-white">HOME</a> </li><li class="item-wrap">       <a href="index.html#pricing2-k" class="text-white">PROJECTS</a> </li><li class="item-wrap">     <a href="about.html" class="text-white">ABOUT </a></li><li class="item-wrap"><br></li>
+						<li class="item-wrap"><a href="index.html" class="text-white">HOME</a> </li><li class="item-wrap"><a href="index.html#pricing2-k" class="text-white">WORKSPACES</a> </li><li class="item-wrap">     <a href="about.html" class="text-white">ABOUT </a></li><li class="item-wrap"><br></li>
 					</ul>
 				</div>
 			</div>
